@@ -1,4 +1,4 @@
-CFLAGS ?= -Os -pipe -mips32 -mtune=mips32 -funit-at-a-time
+CFLAGS ?= -O2
 PKG_CONFIG ?= pkg-config
 
 
@@ -9,8 +9,12 @@ OBJS = cache.o rfc1035.o util.o option.o forward.o isc.o network.o \
 	$(CC) $(CFLAGS) $(COPTS) $(I18N) `echo $(COPTS) | ../bld/pkg-wrapper $(PKG_CONFIG) --cflags dbus-1` $(RPM_OPT_FLAGS) -Wall -W -c $<
 
 dnsmasq : $(OBJS)
-	$(AR) arc -o $@.a  $(OBJS) `echo $(COPTS) | ../bld/pkg-wrapper $(PKG_CONFIG) --libs dbus-1` $(LIBS) 
-
+	$(CC) $(LDFLAGS) -o $@  $(OBJS) `echo $(COPTS) | ../bld/pkg-wrapper $(PKG_CONFIG) --libs dbus-1` $(LIBS) 
+ 
+# busybox integration....
+dnsmasq.a : $(OBJS)
+	$(AR) arc -o $@  $(OBJS)
+ 
 dnsmasq.pot : $(OBJS:.o=.c) dnsmasq.h config.h
 	xgettext -d dnsmasq --foreign-user --keyword=_ -o dnsmasq.pot -i $(OBJS:.o=.c)
 
